Align fix and assets moved

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -4,6 +4,7 @@
   align-content: flex-start;
   flex-flow: row wrap;
   width: 80%;
+  margin: 0px auto;
 }
 
 .card {
